@@ -6,7 +6,8 @@ magic_quotes_sybase=1
 <?php
 $str = 'some \'$sample\' text';
 $str = preg_replace("/(some.*text)/e", "strtoupper('\\1')", $str);
-echo $str;
+echo $str . "\r\n";
 ?>
 --EXPECT--
 SOME '$SAMPLE' TEXT
+PHP Warning:  Directive 'magic_quotes_sybase' is deprecated in PHP 5.3 and greater in Unknown on line 0
