@@ -57,3 +57,4 @@ array(0) {
 }
 array(0) {
 }
+PHP Warning:  Directive 'register_long_arrays' is deprecated in PHP 5.3 and greater in Unknown on line 0
